# GRAIL

./: .gitignore  AIDEAL_design_flow.md  AIDEAL_design_flow_prompts.html  AIDEAL_pipeline_diagram.html  ARCHITECTURE.md  BRANCHING.md  CHANGES_2026-06-30.md  CHANGES_2026-07-06.md  CHANGES_readme_design_2026-07-01.md  EXPERIMENT_ROLE.md  GRAIL_AIDEAL_meeting.pptx  GRAIL_AIDEAL_progress.pptx  GRAIL_readme_fix_progress_20260708.pptx  LOCAL_EXPERIMENT_TRACKING.md  README.md  RepoGenesis_review.pptx  TODO.md  WORKING.md  readme_gen_A_vs_B.md
grail-agent/: README.md  pyproject.toml
grail-agent/benchmarks/notebooks/: RDProClusterizeSuccessfulScala.ipynb  RDProNLPToScala.ipynb  RDProNLPToScalaDirect.ipynb  (+3 more)
grail-agent/configs/: aideal.yaml  integration_tasks.yaml  job_scaffold.scala  local_data_paths.md  project_profile.yaml
grail-agent/docs/: API_TEST_BACKGROUND.md  API_TEST_PLAN.md  LLM_API_TEST_PROMPT_TEMPLATE.md  LLM_API_TEST_SCALA_SCAFFOLD.scala  PIPELINE_REDESIGN.md  RDProAgentLoop_perAPI_fix_migration_guide.md  RDProLLM_v2_with_examples.md  geoTiff.md  geometry.md  mapPixels.md  overlay.md  raptorjoin.md  rdpro_api_doc_combined.md  reshape.md  saveAsGeoTiff.md
grail-agent/examples/: Boston_Neighborhood_Boundaries_sample_grail.geojson
grail-agent/outputs/: aideal_v4.html  boston_land_use_comparison_map.html  generated_from_ui.scala
grail-agent/tests/: test_catalogue_context.py  test_docfix_iterative.py  test_fixreport_and_visibility.py  test_fulldoc_manifest.py  test_intent_dedup.py  test_llm_transport.py
grail-agent/ui/: README.md  grail_ui.py
(+662 files in other folders)
